--- a/src/App.css
+++ b/src/App.css
@@ -6,33 +6,13 @@
   font-family: "Roboto", sans-serif;
 }
 
-.header {
-  font-size: 90px;
-  font-weight: 700;
-  font-style: italic;
-  color: rgb(237, 39, 39);
-}
-
-.header_our_love {
-  font-family: Roboto;
-  font-size: 50px;
-  font-weight: 700;
-  line-height: 50px;
-  color: white;
-  margin: 0;
-  padding: 20px;
-}
-
 .navigation_container {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-
-.becetti_list {
-  color: aliceblue;
-  font-size: 20px;
+  padding-inline-start: none;
+  margin: 0;
+  padding: 15px;
 }
 
 .link {
@@ -59,11 +39,4 @@ a:hover {
 
 a:active {
   color: rgb(113, 115, 216);
-}
-
-.background_image {
-  background-image: url("./assets/images/universe2.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 800px;
 }
